# lstm-portfolio-optimization

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
docs/: theory.md
docs/superpowers/plans/: 2026-03-21-dataset-module.md  2026-05-08-gbt-portfolio-implementation.md
docs/superpowers/specs/: 2026-05-08-gbt-portfolio-design.md
notebooks/: 01_exploration.ipynb
notebooks/data/raw/: prices_XLK_XLF_XLE_XLY_XLV_XLP_XLI_XLB_XLRE_XLU_XLC_2010-01-01_2025-12-31.csv
plots/: complexity_ladder_metrics.csv
scripts/: build_presentation_deck.py  draw_architecture_comparison.py  draw_presentation_plots.py  generate_cover_images.py  run_complexity_ladder.py  verify_data.py
src/: config.py  risk_metrics.py  visualization.py
src/data/: __init__.py  features.py  fetcher.py  preprocessing.py  regime.py
src/models/: __init__.py  gbt.py  linreg.py  lstm.py  mvo.py
tests/: test_risk_metrics.py
tests/data/: test_preprocessing.py  test_regime.py
tests/models/: test_mvo.py
