[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Risk-Adjusted Portfolio Optimization: ML vs. Markowitz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",  # missing docstring in public module (handled at function level)
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
# matplotlib and yfinance have incomplete type stubs; suppress false positives
reportAssignmentType = "warning"
reportAttributeAccessIssue = "warning"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
